Fixing map visibility

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,11 @@ html, body {
 }
 .main-content {
     width: 100%;
+    height: 94%;
 }
 .header {
     background-color: #444040;
-    height: 60px!important;
+    height: 6%;
     width: 100%;
 }
 .sidebar-head-text {
